test/tests/compiler/13_floating-point_numbers/invalid_types/extra_credit/bitwise_or.plx
pub fn main(none) i32 {
    #  It's illegal to apply bitwise | to doubles 
    d: f64 = 0.0 | -0.0
    return 0
}
